# FAIR-XAIR-data-literacy

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/dexpi/: README.md
data/graphs/: knowledge_graph.jsonld  knowledge_graph.ttl
data/json/: C01V04-VER.EX01.json
data/pat_data/: sample_experiment.csv
notebooks/: 01_dexpi_fair_intro.ipynb  02_ro_crate_from_dexpi.ipynb  03_publish_findable_accesible_version-controlled.ipynb
notebooks/DEXPI/: 01_dexpi_fair_intro.ipynb  C01V04-VER.EX01
notebooks/EnzymeML/Data/WET-01a/: absorbance_data.csv  pipetting_scheme.csv
notebooks/EnzymeML/Data/enzymeml/: FDH_kinetics_latest.json
notebooks/EnzymeML/Data/examples/: data_initialrate.csv
notebooks/EnzymeML/Data/processed/: FDH_kinetic_data_calculated.csv
notebooks/EnzymeML/Figures/WET-01/: WET-01a_ModelReaction_EnzymeML.json
notebooks/EnzymeML/Notebooks/: RDM-01a_EnzymeMLDataManagement.ipynb  WET-01a_EnzymeKineticAssay.ipynb
notebooks/RO-Crate/: 02_ro_crate_from_dexpi.ipynb
